# regular

./: Cargo.toml  aliases.js  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
.github/scripts/: prep_documentation.sh
.github/workflows/: rust-ci.yml
regular/: all.html  enum.Error.html  enum.Range.html  index.html  sidebar-items.js  struct.DFA.html  struct.DFABuilder.html  struct.DefaultDFAStorage.html  trait.DFAStorage.html
regular/accept/: index.html  sidebar-items.js  trait.Accept.html  trait.IterExt.html
regular/alphabet/: index.html  sidebar-items.js  struct.Boolean.html  struct.Full.html  struct.FullRange.html  struct.Unit.html  trait.Alphabet.html  trait.IntoAlphabet.html
regular/dfa/: struct.DFA.html  struct.DFABuilder.html  struct.DefaultDFAStorage.html  trait.DFAStorage.html
regular/error/: enum.Error.html
regular/prelude/: enum.Error.html  index.html  sidebar-items.js  struct.DFA.html  struct.DFABuilder.html  struct.DefaultDFAStorage.html  trait.DFAStorage.html
regular/util/: enum.Range.html  index.html  sidebar-items.js  struct.FixedBitSet.html  struct.Join.html  struct.SetPartitions.html  struct.VecSet.html  trait.Bounded.html  trait.Step.html  trait.StorageInt.html
src/: accept.rs  alphabet.rs  dfa.rs  error.rs  lib.rs  test_helper.rs  util.rs
src/dfa/: operations.rs
src/regular/: accept.rs.html  alphabet.rs.html  dfa.rs.html  error.rs.html  lib.rs.html  util.rs.html
src/util/: bit_set.rs  cartesian_product.rs  either.rs  join_iter.rs  set_partition.rs  step.rs  storage_int.rs  vec_set.rs
(+47 files in other folders)
